<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        tools:context=".ui.auth.SignupActivity">

        <ImageView
            android:id="@+id/companyLogo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/company_logo" />
        <!--        <include layout="@layout/toolbar" />-->

        <RelativeLayout
            android:id="@+id/signupLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/companyLogo"
            android:layout_centerInParent="true">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:labelFor="@id/editTextFirstname"
                        android:text="@string/register_first_name_title"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextFirstname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/register_first_name_hint"
                        android:inputType="textPersonName"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:labelFor="@id/editTextLastname"
                        android:text="@string/register_last_name_title"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextLastname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/register_last_name_hint"
                        android:inputType="textPersonName"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:labelFor="@id/editTextEmail"
                        android:text="@string/register_email_address_title"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/register_email_address_hint"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:labelFor="@id/editTextPassword"
                        android:text="@string/register_password_title"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/register_password_hint"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:labelFor="@id/editTextConfirmPassword"
                        android:text="@string/register_confirm_password_title"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextConfirmPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_confirm_password_hint"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/buttonSignup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:layout_marginBottom="16sp"
                        android:background="@color/colorPrimary"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/register_button_title"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/register_need_account_title"
                        android:textAlignment="center"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/textViewRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="14dp"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/register_return_login_title"
                        android:textAlignment="center"
                        android:textColor="#000000" />
                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

</layout>