<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Load the toolbar here -->
        <include
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/receiptRootLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewFuelStationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="right"
                android:text="@string/receipt_fuelstation_name"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:gravity="right"
                android:text="@string/receipt_fuelstation_address"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textViewDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:gravity="right"
                android:text="@string/receipt_datetime"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/receipt_name_title"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/receipt_fullname"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/receipt_paymentmethod_title"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewPaymentMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/receipt_paymentmethod"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/receipt_pumpnumber_title"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewPumpNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/receipt_pumpnumber"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/receipt_fueltype_title"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewFuelType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/receipt_fueltype"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/receipt_fuelamount"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewFuelAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/receipt_fuelamount"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/receipt_pricelitre_title"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewPricePerLitre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/receipt_pricelitre"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/receipt_discount_title"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/receipt_discount"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/receipt_vatrate_title"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewVatRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/receipt_vatrate"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/receipt_exvat_title"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewTotalExVat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/receipt_exvat"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/receipt_vat_title"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewVat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/receipt_vat"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/receipt_total_title"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/receipt_total"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonContinue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="40dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/open_sans_bold"
                android:text="RETURN TO HOME"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>