<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/editTextCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:fontFamily="@font/open_sans"
            android:hint="@string/dialog_card_number_hint"
            android:inputType="number"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextExpMonth"
                android:layout_width="45dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:maxLength="2"
                android:fontFamily="@font/open_sans"
                android:hint="@string/dialog_month_hint"
                android:inputType="number"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editTextExpYear"
                android:layout_width="45dp"
                android:layout_marginRight="120dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:maxLength="2"
                android:fontFamily="@font/open_sans"
                android:hint="@string/dialog_year_hint"
                android:inputType="number"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editTextCvc"
                android:layout_width="60dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:fontFamily="@font/open_sans"
                android:hint="@string/dialog_cvc_hint"
                android:inputType="number"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>